--- a/publicar/training_model/requirements.txt
+++ b/publicar/training_model/requirements.txt
@@ -1,55 +1,56 @@
 absl-py==2.0.0
-alembic==1.12.0
+alembic==1.12.1
 astunparse==1.6.3
-blinker==1.6.2
-boto3==1.28.57
-botocore==1.31.57
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.2.0
+blinker==1.7.0
+boto3==1.29.1
+botocore==1.32.3
+cachetools==5.3.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==2.2.1
-contourpy==1.1.1
-cycler==0.12.0
-databricks-cli==0.17.8
+contourpy==1.2.0
+cycler==0.12.1
+databricks-cli==0.18.0
 docker==6.1.3
 entrypoints==0.4
-Flask==2.3.3
+Flask==3.0.0
 flatbuffers==23.5.26
-fonttools==4.43.0
+fonttools==4.44.3
 gast==0.5.4
-gitdb==4.0.10
-GitPython==3.1.37
-google-auth==2.23.2
-google-auth-oauthlib==1.0.0
+gitdb==4.0.11
+GitPython==3.1.40
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
 google-pasta==0.2.0
-greenlet==2.0.2
-grpcio==1.59.0
+greenlet==3.0.1
+grpcio==1.59.3
 gunicorn==21.2.0
-h5py==3.9.0
+h5py==3.10.0
 idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.3.2
-keras==2.14.0
+keras==2.15.0
 kiwisolver==1.4.5
 libclang==16.0.6
-Mako==1.2.4
-Markdown==3.4.4
+Mako==1.3.0
+Markdown==3.5.1
 MarkupSafe==2.1.3
-matplotlib==3.8.0
+matplotlib==3.8.2
 ml-dtypes==0.2.0
-mlflow==2.7.1
-numpy==1.26.0
+mlflow==2.8.1
+numpy==1.26.2
 oauthlib==3.2.2
 opt-einsum==3.3.0
-packaging==23.1
-pandas==2.1.1
-Pillow==10.0.1
-pip==23.3
-protobuf==4.24.3
-pyarrow==13.0.0
+packaging==23.2
+pandas==2.1.3
+Pillow==10.1.0
+pip==23.3.1
+protobuf==4.23.4
+pyarrow==14.0.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 PyJWT==2.8.0
@@ -61,26 +62,27 @@ querystring-parser==1.2.4
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
-scikit-learn==1.3.1
-scipy==1.11.3
+s3transfer==0.7.0
+scikit-learn==1.3.2
+scipy==1.11.4
 setuptools==68.2.2
 six==1.16.0
 smmap==5.0.1
-SQLAlchemy==2.0.21
+SQLAlchemy==2.0.23
 sqlparse==0.4.4
 tabulate==0.9.0
-tensorboard==2.14.1
-tensorboard-data-server==0.7.1
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.34.0
 termcolor==2.3.0
 threadpoolctl==3.2.0
 typing_extensions==4.8.0
 tzdata==2023.3
-urllib3==1.26.18
-websocket-client==1.6.3
+urllib3==2.0.7
+websocket-client==1.6.4
 Werkzeug==3.0.1
-wheel==0.41.2
+wheel==0.41.3
 wrapt==1.14.1
 zipp==3.17.0
