--- a/publicar/worker_pub/requirements.txt
+++ b/publicar/worker_pub/requirements.txt
@@ -1,17 +1,17 @@
 absl-py==2.0.0
-alembic==1.12.1
+alembic==1.13.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 astunparse==1.6.3
 blinker==1.7.0
-boto3==1.29.1
-botocore==1.32.3
+boto3==1.34.7
+botocore==1.34.8
 cachetools==5.3.2
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
-cloudpickle==2.2.1
+cloudpickle==3.0.0
 contourpy==1.2.0
 cycler==0.12.1
 databricks-cli==0.18.0
@@ -19,19 +19,19 @@ docker==6.1.3
 entrypoints==0.4
 Flask==3.0.0
 flatbuffers==23.5.26
-fonttools==4.44.3
+fonttools==4.47.0
 gast==0.5.4
 gitdb==4.0.11
 GitPython==3.1.40
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
+google-auth==2.25.2
+google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
-greenlet==3.0.1
-grpcio==1.59.3
+greenlet==3.0.3
+grpcio==1.60.0
 gunicorn==21.2.0
 h5py==3.10.0
-idna==3.4
-importlib-metadata==6.8.0
+idna==3.6
+importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -43,20 +43,20 @@ Mako==1.3.0
 Markdown==3.5.1
 MarkupSafe==2.1.3
 matplotlib==3.8.2
-minio==7.2.0
+minio==7.2.1
 ml-dtypes==0.2.0
-mlflow==2.8.1
-mllibprodest==1.8.1
+mlflow==2.9.2
+mllibprodest==1.8.2
 numpy==1.26.2
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
-pandas==2.1.3
+pandas==2.1.4
 Pillow==10.1.0
-pip==23.3.1
+pip==23.3.2
 protobuf==4.23.4
-pyarrow==14.0.1
-pyasn1==0.5.0
+pyarrow==14.0.2
+pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
 pycryptodome==3.19.0
@@ -70,10 +70,10 @@ querystring-parser==1.2.4
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
-s3transfer==0.7.0
+s3transfer==0.10.0
 scikit-learn==1.3.2
 scipy==1.11.4
-setuptools==68.2.2
+setuptools==69.0.3
 six==1.16.0
 smmap==5.0.1
 SQLAlchemy==2.0.23
@@ -81,16 +81,16 @@ sqlparse==0.4.4
 tabulate==0.9.0
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
-tensorflow==2.15.0
+tensorflow==2.15.0.post1
 tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==2.3.0
+tensorflow-io-gcs-filesystem==0.35.0
+termcolor==2.4.0
 threadpoolctl==3.2.0
-typing_extensions==4.8.0
+typing_extensions==4.9.0
 tzdata==2023.3
 urllib3==2.0.7
-websocket-client==1.6.4
+websocket-client==1.7.0
 Werkzeug==3.0.1
-wheel==0.41.3
+wheel==0.42.0
 wrapt==1.14.1
 zipp==3.17.0
