--- a/publicar/worker_retrain/requirements.txt
+++ b/publicar/worker_retrain/requirements.txt
@@ -1,13 +1,14 @@
-absl-py==2.0.0
+absl-py==2.1.0
 alembic==1.13.1
+aniso8601==9.0.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 astunparse==1.6.3
 blinker==1.7.0
-boto3==1.34.7
-botocore==1.34.8
-cachetools==5.3.2
-certifi==2023.11.17
+boto3==1.34.60
+botocore==1.34.61
+cachetools==5.3.3
+certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
@@ -15,82 +16,91 @@ cloudpickle==3.0.0
 contourpy==1.2.0
 cycler==0.12.1
 databricks-cli==0.18.0
-docker==6.1.3
+dm-tree==0.1.8
+docker==7.0.0
 entrypoints==0.4
-Flask==3.0.0
-flatbuffers==23.5.26
-fonttools==4.47.0
+Flask==3.0.2
+flatbuffers==24.3.7
+fonttools==4.49.0
 gast==0.5.4
 gitdb==4.0.11
-GitPython==3.1.40
-google-auth==2.25.2
+GitPython==3.1.42
+google-auth==2.28.2
 google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
+graphene==3.3
+graphql-core==3.2.3
+graphql-relay==3.2.0
 greenlet==3.0.3
-grpcio==1.60.0
+grpcio==1.62.1
 gunicorn==21.2.0
 h5py==3.10.0
 idna==3.6
-importlib-metadata==7.0.1
+importlib_metadata==7.0.2
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.1.3
 jmespath==1.0.1
 joblib==1.3.2
-keras==2.15.0
+keras==3.0.5
 kiwisolver==1.4.5
 libclang==16.0.6
-Mako==1.3.0
-Markdown==3.5.1
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-minio==7.2.1
-ml-dtypes==0.2.0
-mlflow==2.9.2
-mllibprodest==1.8.3
-numpy==1.26.2
+Mako==1.3.2
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+mdurl==0.1.2
+minio==7.2.5
+ml-dtypes==0.3.2
+mlflow==2.11.1
+mllibprodest==1.8.4
+namex==0.0.7
+numpy==1.26.4
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
-pandas==2.1.4
-Pillow==10.1.0
-pip==23.3.2
-protobuf==4.23.4
-pyarrow==14.0.2
+pandas==2.2.1
+pillow==10.2.0
+pip==24.0
+protobuf==4.25.3
+pyarrow==15.0.1
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
-pycryptodome==3.19.0
+pycryptodome==3.20.0
+Pygments==2.17.2
 PyJWT==2.8.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2023.3.post1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
 PyYAML==6.0.1
 querystring-parser==1.2.4
 requests==2.31.0
-requests-oauthlib==1.3.1
+requests-oauthlib==1.4.0
+rich==13.7.1
 rsa==4.9
 s3transfer==0.10.0
-scikit-learn==1.3.2
-scipy==1.11.4
-setuptools==69.0.3
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+setuptools==69.1.1
 six==1.16.0
 smmap==5.0.1
-SQLAlchemy==2.0.23
+SQLAlchemy==2.0.28
 sqlparse==0.4.4
 tabulate==0.9.0
-tensorboard==2.15.1
+tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.15.0.post1
+tensorflow==2.16.1
 tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.35.0
+tensorflow-io-gcs-filesystem==0.36.0
 termcolor==2.4.0
-threadpoolctl==3.2.0
-typing_extensions==4.9.0
-tzdata==2023.3
+threadpoolctl==3.3.0
+typing_extensions==4.10.0
+tzdata==2024.1
 urllib3==2.0.7
 websocket-client==1.7.0
 Werkzeug==3.0.1
-wheel==0.42.0
-wrapt==1.14.1
+wheel==0.43.0
+wrapt==1.16.0
 zipp==3.17.0
