--- a/publicar/training_model/requirements.txt
+++ b/publicar/training_model/requirements.txt
@@ -2,97 +2,102 @@ absl-py==2.1.0
 alembic==1.13.1
 aniso8601==9.0.1
 astunparse==1.6.3
-blinker==1.7.0
-boto3==1.34.61
-botocore==1.34.61
+blinker==1.8.2
+boto3==1.34.133
+botocore==1.34.133
 cachetools==5.3.3
-certifi==2024.2.2
+certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
-contourpy==1.2.0
+contourpy==1.2.1
 cycler==0.12.1
 databricks-cli==0.18.0
+Deprecated==1.2.14
 dm-tree==0.1.8
-docker==7.0.0
+docker==7.1.0
 entrypoints==0.4
-Flask==3.0.2
-flatbuffers==24.3.7
-fonttools==4.49.0
+Flask==3.0.3
+flatbuffers==24.3.25
+fonttools==4.53.0
 gast==0.5.4
 gitdb==4.0.11
-GitPython==3.1.42
-google-auth==2.28.2
+GitPython==3.1.43
+google-auth==2.30.0
 google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
 graphene==3.3
 graphql-core==3.2.3
 graphql-relay==3.2.0
 greenlet==3.0.3
-grpcio==1.62.1
-gunicorn==21.2.0
-h5py==3.10.0
-idna==3.6
-importlib_metadata==7.0.2
-itsdangerous==2.1.2
-Jinja2==3.1.3
+grpcio==1.64.1
+gunicorn==22.0.0
+h5py==3.11.0
+idna==3.7
+importlib_metadata==7.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
 jmespath==1.0.1
-joblib==1.3.2
-keras==3.0.5
+joblib==1.4.2
+keras==3.3.3
 kiwisolver==1.4.5
-libclang==16.0.6
-Mako==1.3.2
-Markdown==3.5.2
+libclang==18.1.1
+Mako==1.3.5
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.8.3
+matplotlib==3.9.0
 mdurl==0.1.2
 ml-dtypes==0.3.2
-mlflow==2.11.1
-namex==0.0.7
+mlflow==2.14.1
+namex==0.0.8
 numpy==1.26.4
 oauthlib==3.2.2
+opentelemetry-api==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
 opt-einsum==3.3.0
-packaging==23.2
-pandas==2.2.1
-pillow==10.2.0
-pip==24.0
+optree==0.11.0
+packaging==24.1
+pandas==2.2.2
+pillow==10.3.0
+pip==24.1
 protobuf==4.25.3
-pyarrow==15.0.1
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-Pygments==2.17.2
+pyarrow==15.0.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+Pygments==2.18.0
 PyJWT==2.8.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 querystring-parser==1.2.4
-requests==2.31.0
-requests-oauthlib==1.4.0
+requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.7.1
 rsa==4.9
-s3transfer==0.10.0
-scikit-learn==1.4.1.post1
-scipy==1.12.0
-setuptools==69.1.1
+s3transfer==0.10.1
+scikit-learn==1.5.0
+scipy==1.14.0
+setuptools==70.1.0
 six==1.16.0
 smmap==5.0.1
-SQLAlchemy==2.0.28
-sqlparse==0.4.4
+SQLAlchemy==2.0.31
+sqlparse==0.5.0
 tabulate==0.9.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
 tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.36.0
+tensorflow-io-gcs-filesystem==0.37.0
 termcolor==2.4.0
-threadpoolctl==3.3.0
-typing_extensions==4.10.0
+threadpoolctl==3.5.0
+typing_extensions==4.12.2
 tzdata==2024.1
-urllib3==2.0.7
-websocket-client==1.7.0
-Werkzeug==3.0.1
+urllib3==2.2.2
+websocket-client==1.8.0
+Werkzeug==3.0.3
 wheel==0.43.0
 wrapt==1.16.0
-zipp==3.17.0
+zipp==3.19.2
