--- a/publicar/worker_pub/requirements.txt
+++ b/publicar/worker_pub/requirements.txt
@@ -1,112 +1,114 @@
 absl-py==2.1.0
-alembic==1.13.1
+alembic==1.13.3
 aniso8601==9.0.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 astunparse==1.6.3
 blinker==1.8.2
-boto3==1.34.133
-botocore==1.34.133
-cachetools==5.3.3
-certifi==2024.6.2
-cffi==1.16.0
+boto3==1.35.35
+botocore==1.35.35
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
-contourpy==1.2.1
+contourpy==1.3.0
 cycler==0.12.1
 databricks-cli==0.18.0
+databricks-sdk==0.34.0
 Deprecated==1.2.14
 dm-tree==0.1.8
 docker==7.1.0
 entrypoints==0.4
 Flask==3.0.3
 flatbuffers==24.3.25
-fonttools==4.53.0
-gast==0.5.4
+fonttools==4.54.1
+gast==0.6.0
 gitdb==4.0.11
 GitPython==3.1.43
-google-auth==2.30.0
-google-auth-oauthlib==1.2.0
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
 google-pasta==0.2.0
 graphene==3.3
-graphql-core==3.2.3
+graphql-core==3.2.4
 graphql-relay==3.2.0
-greenlet==3.0.3
-grpcio==1.64.1
-gunicorn==22.0.0
-h5py==3.11.0
-idna==3.7
-importlib_metadata==7.1.0
+greenlet==3.1.1
+grpcio==1.66.2
+gunicorn==23.0.0
+h5py==3.12.1
+idna==3.10
+importlib_metadata==8.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
 joblib==1.4.2
-keras==3.3.3
-kiwisolver==1.4.5
+keras==3.6.0
+kiwisolver==1.4.7
 libclang==18.1.1
 Mako==1.3.5
-Markdown==3.6
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.0
+matplotlib==3.9.2
 mdurl==0.1.2
-minio==7.2.7
-ml-dtypes==0.3.2
-mlflow==2.14.1
-mllibprodest==1.8.6
+minio==7.2.9
+ml-dtypes==0.4.1
+mlflow==2.16.2
+mlflow-skinny==2.16.2
+mllibprodest==1.8.7
 namex==0.0.8
 numpy==1.26.4
 oauthlib==3.2.2
-opentelemetry-api==1.25.0
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-opt-einsum==3.3.0
-optree==0.11.0
+opentelemetry-api==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opt_einsum==3.4.0
+optree==0.13.0
 packaging==24.1
-pandas==2.2.2
+pandas==2.2.3
 pika==1.3.2
-pillow==10.3.0
-pip==24.1
-protobuf==4.25.3
-pyarrow==15.0.2
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
+pillow==10.4.0
+pip==24.2
+protobuf==4.25.5
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
-pycryptodome==3.20.0
+pycryptodome==3.21.0
 Pygments==2.18.0
-PyJWT==2.8.0
-pyparsing==3.1.2
+PyJWT==2.9.0
+pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.1
+pytz==2024.2
+PyYAML==6.0.2
 querystring-parser==1.2.4
 requests==2.32.3
 requests-oauthlib==2.0.0
-rich==13.7.1
+rich==13.9.2
 rsa==4.9
-s3transfer==0.10.1
-scikit-learn==1.5.0
-scipy==1.14.0
-setuptools==70.1.0
+s3transfer==0.10.2
+scikit-learn==1.5.2
+scipy==1.14.1
+setuptools==75.1.0
 six==1.16.0
 smmap==5.0.1
-SQLAlchemy==2.0.31
-sqlparse==0.5.0
+SQLAlchemy==2.0.35
+sqlparse==0.5.1
 tabulate==0.9.0
-tensorboard==2.16.2
+tensorboard==2.17.1
 tensorboard-data-server==0.7.2
-tensorflow==2.16.1
+tensorflow==2.17.0
 tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.37.0
-termcolor==2.4.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.5.0
 threadpoolctl==3.5.0
 typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
+tzdata==2024.2
+urllib3==2.2.3
 websocket-client==1.8.0
-Werkzeug==3.0.3
-wheel==0.43.0
+Werkzeug==3.0.4
+wheel==0.44.0
 wrapt==1.16.0
-zipp==3.19.2
+zipp==3.20.2
