--- a/publicar/training_model/requirements.txt
+++ b/publicar/training_model/requirements.txt
@@ -1,105 +1,116 @@
-absl-py==2.1.0
-alembic==1.13.3
-aniso8601==9.0.1
+absl-py==2.2.2
+alembic==1.15.2
+aniso8601==10.0.0
+annotated-types==0.7.0
+anyio==4.9.0
 astunparse==1.6.3
-blinker==1.8.2
-boto3==1.35.35
-botocore==1.35.35
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpickle==3.0.0
-contourpy==1.3.0
+attrs==25.3.0
+blinker==1.9.0
+boto3==1.37.38
+botocore==1.37.38
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpickle==3.1.1
+contourpy==1.3.2
 cycler==0.12.1
 databricks-cli==0.18.0
-databricks-sdk==0.34.0
-Deprecated==1.2.14
-dm-tree==0.1.8
+databricks-sdk==0.50.0
+Deprecated==1.2.18
+dm-tree==0.1.9
 docker==7.1.0
 entrypoints==0.4
-Flask==3.0.3
-flatbuffers==24.3.25
-fonttools==4.54.1
+fastapi==0.115.12
+Flask==3.1.0
+flatbuffers==25.2.10
+fonttools==4.57.0
 gast==0.6.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth==2.35.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.39.0
 google-auth-oauthlib==1.2.1
 google-pasta==0.2.0
-graphene==3.3
-graphql-core==3.2.4
+graphene==3.4.3
+graphql-core==3.2.6
 graphql-relay==3.2.0
-greenlet==3.1.1
-grpcio==1.66.2
+greenlet==3.2.0
+grpcio==1.71.0
 gunicorn==23.0.0
-h5py==3.12.1
+h11==0.14.0
+h5py==3.13.0
 idna==3.10
-importlib_metadata==8.4.0
+importlib_metadata==8.6.1
 itsdangerous==2.2.0
-Jinja2==3.1.4
+Jinja2==3.1.6
 jmespath==1.0.1
 joblib==1.4.2
-keras==3.6.0
-kiwisolver==1.4.7
+keras==3.9.2
+kiwisolver==1.4.8
 libclang==18.1.1
-Mako==1.3.5
-Markdown==3.7
+Mako==1.3.10
+Markdown==3.8
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
+MarkupSafe==3.0.2
+matplotlib==3.10.1
 mdurl==0.1.2
-ml-dtypes==0.4.1
-mlflow==2.16.2
-mlflow-skinny==2.16.2
+ml_dtypes==0.5.1
+mlflow==2.21.3
+mlflow-skinny==2.21.3
 namex==0.0.8
-numpy==1.26.4
+numpy==2.1.3
 oauthlib==3.2.2
-opentelemetry-api==1.27.0
-opentelemetry-sdk==1.27.0
-opentelemetry-semantic-conventions==0.48b0
+opentelemetry-api==1.32.1
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
 opt_einsum==3.4.0
-optree==0.13.0
-packaging==24.1
+optree==0.15.0
+packaging==24.2
 pandas==2.2.3
-pillow==10.4.0
-pip==24.2
-protobuf==4.25.5
-pyarrow==17.0.0
+pillow==11.2.1
+pip==25.0.1
+protobuf==5.29.4
+pyarrow==19.0.1
 pyasn1==0.6.1
-pyasn1_modules==0.4.1
-Pygments==2.18.0
-PyJWT==2.9.0
-pyparsing==3.1.4
+pyasn1_modules==0.4.2
+pydantic==2.11.3
+pydantic_core==2.33.1
+Pygments==2.19.1
+PyJWT==2.10.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-pytz==2024.2
+pytz==2025.2
 PyYAML==6.0.2
 querystring-parser==1.2.4
 requests==2.32.3
 requests-oauthlib==2.0.0
-rich==13.9.2
-rsa==4.9
-s3transfer==0.10.2
-scikit-learn==1.5.2
-scipy==1.14.1
-setuptools==75.1.0
-six==1.16.0
-smmap==5.0.1
-SQLAlchemy==2.0.35
-sqlparse==0.5.1
+rich==14.0.0
+rsa==4.9.1
+s3transfer==0.11.5
+scikit-learn==1.6.1
+scipy==1.15.2
+setuptools==78.1.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+sqlparse==0.5.3
+starlette==0.46.2
 tabulate==0.9.0
-tensorboard==2.17.1
+tensorboard==2.19.0
 tensorboard-data-server==0.7.2
-tensorflow==2.17.0
+tensorflow==2.19.0
 tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.5.0
-threadpoolctl==3.5.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
+termcolor==3.0.1
+threadpoolctl==3.6.0
+typing_extensions==4.13.2
+typing-inspection==0.4.0
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.1
 websocket-client==1.8.0
-Werkzeug==3.0.4
-wheel==0.44.0
-wrapt==1.16.0
-zipp==3.20.2
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
+zipp==3.21.0
